--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link href='https://fonts.googleapis.com/css?family=Gloria Hallelujah' rel='stylesheet'>
 </head>
 
 <body class="mat-app-background">
