--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lemon&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
 </head>
 
 <body class="mat-app-background">
